# uni_labs.OOP

./: .gitignore
lab1/: CMakeLists.txt  main.cpp  matrix.cpp  matrix.h  tests.txt
lab11/: CMakeLists.txt  main.cpp  matrix.cpp  matrix.h
lab2/: CMakeLists.txt  ConchoidNicomed.ggb  conchoidnicomed.cpp  conchoidnicomed.h  dialog.cpp  dialog.h  main.cpp
lab2_gtest/: CMakeLists.txt  tst_lab2_tests.cpp
lab2_lib/: CMakeLists.txt  main.cpp
lab3/: CMakeLists.txt  binary1.cpp  binary1.h  binary2.cpp  binary2.h  binary3.cpp
lab3_test/: CMakeLists.txt  tst_lab3_test.cpp
lab4/: CMakeLists.txt  Diagram.uml  Diagram.~ml  Doxyfile.dox  dialog.cpp  game.cpp  game.h  gamehistory.cpp  gamehistory.h  main.cpp  player.cpp  player.h  readme.txt
lab4/Pieces/: bishop.cpp  bishop.h  king.cpp  king.h  knight.cpp  knight.h  pawn.cpp  pawn.h  piece.cpp  piece.h  position.cpp  queen.cpp  queen.h  rook.cpp  rook.h
lab4/html/: class_chess_1_1_bishop-members.html  class_chess_1_1_bishop.html  class_chess_1_1_bishop__coll__graph.map  class_chess_1_1_clock-members.html  class_chess_1_1_clock.html  class_chess_1_1_game-members.html  class_chess_1_1_game.html  class_chess_1_1_game_history-members.html  class_chess_1_1_king-members.html  class_chess_1_1_king__coll__graph.md5  class_chess_1_1_king__inherit__graph.md5  class_chess_1_1_knight-members.html  class_chess_1_1_knight.html  class_chess_1_1_knight__inherit__graph.map  class_chess_1_1_knight__inherit__graph.md5  class_chess_1_1_pawn__coll__graph.map  class_chess_1_1_pawn__inherit__graph.md5  class_chess_1_1_piece-members.html  class_chess_1_1_piece__inherit__graph.map  class_chess_1_1_player-members.html  class_chess_1_1_position-members.html  class_chess_1_1_position.html  class_chess_1_1_queen.html  class_chess_1_1_queen__coll__graph.map  class_chess_1_1_queen__coll__graph.md5  class_chess_1_1_queen__inherit__graph.md5  class_chess_1_1_rook-members.html  class_chess_1_1_rook__inherit__graph.md5  classes.html  clock_8h_source.html  files.html  gamehistory_8h_source.html  graph_legend.html  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_1.map  inherit_graph_2.map  inherit_graph_3.map  inherit_graph_3.md5  (+7 more)
lab4/html/search/: all_3.js  classes_2.js  classes_4.js  classes_5.js  classes_6.js
lab4/latex/: annotated.tex  class_chess_1_1_bishop.tex  class_chess_1_1_bishop__coll__graph.md5  class_chess_1_1_bishop__inherit__graph.md5  class_chess_1_1_game_history.tex  class_chess_1_1_king.tex  class_chess_1_1_knight.tex  class_chess_1_1_knight__inherit__graph.md5  class_chess_1_1_pawn.eps  class_chess_1_1_pawn.tex  class_chess_1_1_pawn__coll__graph.md5  class_chess_1_1_pawn__inherit__graph.md5  class_chess_1_1_piece.tex  class_chess_1_1_position.tex  class_chess_1_1_queen.tex  class_chess_1_1_queen__coll__graph.md5  class_chess_1_1_queen__inherit__graph.md5  class_chess_1_1_rook.eps  class_chess_1_1_rook.tex  refman.tex
lab4_graphics/: CMakeLists.txt  main.cpp  mainwindow.h  mainwindow.ui  qpawn.cpp  qpawn.h
lab4_review/: Diagram.uml  clock.cpp  clock.h  dialog.cpp  dialog.h  game.cpp  game.h  gamehistory.cpp  gamehistory.h  main.cpp  readme.txt  simple_mate.txt
lab4_test/: CMakeLists.txt  tst_lab4_test.cpp
lab5/: CMakeLists.txt  main.cpp  place.cpp  place.h  token.cpp  token.h  transition.cpp  transition.h
(+76 files in other folders)
